refactor: move existing Operate batch classes to use the new CamundaAuthenticationProvider class